<resources>
    <string name="app_name">Learn Language</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_favourite">Add to Favourites</string>
    <string name="action_play_next">Play Next</string>
    <string name="backdrop_title">LEARN ENGLISH</string>
    <string name="front">FRONT</string>
    <string name="back">BACK</string>
    <string name="english_word_hint">İngilizce Kelime</string>
    <string name="meaning_hint"><font size="15">Türkçe Anlamı</font></string>
    <string name="save_word">Kaydet</string>
    <string name="cancel">İptal</string>
    <string name="ok">Evet</string>
    <string name="Tekrar_Quiz_Yap">Quiz Tekrarı</string>
    <string name="Anasayfa">Anasayfa</string>
    <string name="todo">TODO</string>
    <string name="search_word">Kelimeni Ara</string>
    <string name="search">Bul</string>
    <string name="add_new_word">Yeni Kelime Ekle</string>
    <string name="delete_word">Sil</string>
    <string name="there_is_no_word">veritabanınızda bulunmamaktadır.</string>
</resources>
