<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sena.asus.learnlanguage.MyWordWorld"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editText_SearchView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/search_word"
                android:textSize="@dimen/search_word"
                android:layout_margin="@dimen/tendp"
                android:drawableLeft="@drawable/ic_search_black_24dp"/>

            <LinearLayout
                android:id="@+id/layout_words"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:visibility="invisible">

                <TextView
                    android:id="@+id/textView_english"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
                <TextView
                    android:id="@+id/textView_turkish"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />

            </LinearLayout>
            <Button
                android:id="@+id/btn_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search"
                android:layout_gravity="center"
                android:textColor="@color/colorPrimary"  />

            <Button
                android:id="@+id/btn_addWord"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_new_word"
                android:layout_marginTop="50dp"
                android:layout_marginRight="@dimen/tendp"
                android:layout_marginLeft="@dimen/tendp"
                android:textColor="@color/eklecolor_btn"/>
            <Button
                android:id="@+id/btn_deleteWord"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delete_word"
                android:layout_marginLeft="@dimen/tendp"
                android:layout_marginRight="@dimen/tendp"
                android:layout_marginTop="35dp"
                android:textColor="@color/colorPrimaryDark"/>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                app:srcCompat="@drawable/studying" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
